# tecio

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml  refresh_stats.yml
ci/: install_whl.py  preplot.tar.gz.gpg
tecio/: __init__.py  tecio.py
tests/: read.py  write.py
